--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>ARMAN SHOJAEIFARD</h1>
-<p>Hosted via GitHub.</p>
-</body>
-</html>
+<h2>ARMAN SHOJAEIFARD</h2>
+<h3>Bio</h3>
+<p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>.&nbsp;My <a href="https://scholar.google.co.uk/citations?user=rTcTr_cAAAAJ&amp;hl=en" target="_blank">research</a> is in the area of Information Theory and Communications,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G and beyond&nbsp;cellular networks.</p>
+<h3>Journal Publications</h3>
+<p>&bull; A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Self-Interference in Full-Duplex Multi-User MIMO Channels," <em>IEEE Commun. Lett.</em>, accepted 2017.</p>
+<p>&bull; A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>,&nbsp;submitted 2016.</p>
+<p>&bull; J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, submitted 2016.</p>
+<p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, J. Wen, "Joint Antenna Selection and Spatial Switching for Energy Efficient MIMO SWIPT System," <em>IEEE Trans. Veh. Technol.</em>, submitted 2016.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, submitted 2016.</p>
+<p>&bull; A. Shojaeifard, K-K. Wong, K. A. Hamdi, E. Alsusa, D. So., J. Tang, "Stochastic Geometric Analysis of Energy-Efficient Dense Cellular Networks," <em>IEEE Access</em>, accepted 2016.&nbsp;</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, K-K. Wong, "Design, Modeling, and Performance Analysis of Multi-Antenna Heterogeneous Cellular Networks," <em>IEEE Trans. Commun.</em>, vol. 64, no. 7, pp. 3104-3118, July 2016.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "On the Energy Efficiency&ndash;Spectral Efficiency Tradeoff in MIMO-OFDMA Broadcast Channels," <em>IEEE Trans. Veh.&nbsp;Technol.</em>, vol. 65, no. 7, pp. 5185-5199, July 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Exact SINR Statistics in the Presence of Heterogeneous Interferers," <em>IEEE Trans. Inf. Theory</em>, vol. 61, no. 12, pp. 6759-6773, Dec. 2015.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi and A. Shojaeifard, "Resource Allocation for Energy Efficiency Optimization in Heterogeneous Networks," <em>IEEE J.&nbsp;Sel. Areas Commun.</em>, vol. 33, no. 10, pp. 2104-2117, Oct. 2015.</p>
+<p>&bull; M. M. Mahyari, A. Shojaeifard, M. Shikh-Bahaei, "Probabilistic Radio Resource Allocation Over CDMA-Based Cognitive Radio Networks," <em>IEEE Trans. Veh. Technol.</em>, vol. 64, no. 8, pp. 3560-3565, Aug. 2015.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy Efficiency Optimization With Interference Alignment in Multi-Cell MIMO Interfering Broadcast Channels," <em>IEEE Trans. Commun.</em>, vol. 63, no. 7, pp. 2486-2499, July 2015.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "A Unified Model for the Design and Analysis of Spatially-Correlated Load-Aware HetNets," <em>IEEE Trans. Commun.</em>, vol. 62, no. 11, pp. 1-16, Nov. 2014.</p>
+<p>&bull; A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
+<p>&bull; A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
