--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h2>ARMAN SHOJAEIFARD</h2>
+<h2>ARMAN SHOJAEIFARD, Ph.D., M.Sc., B.Eng.<img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="120" height="124" /></h2>
 <h3>Bio</h3>
 <p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>.&nbsp;My <a href="https://scholar.google.co.uk/citations?user=rTcTr_cAAAAJ&amp;hl=en" target="_blank">research</a> is in the area of Information Theory and Communications,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G and beyond&nbsp;cellular networks.</p>
 <h3>Journal Publications</h3>
@@ -17,3 +17,4 @@
 <p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "A Unified Model for the Design and Analysis of Spatially-Correlated Load-Aware HetNets," <em>IEEE Trans. Commun.</em>, vol. 62, no. 11, pp. 1-16, Nov. 2014.</p>
 <p>&bull; A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>&bull; A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
+<p>Edited with the <a href="https://html5-editor.net/" rel="nofollow">online HTML5 composer</a>. Please subscribe for a <a href="https://htmlg.com" target="_blank" rel="nofollow">htmlg.com</a> membership to remove similar messages from the documents.</p>
