--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h2>ARMAN SHOJAEIFARD, Ph.D., M.Sc., B.Eng.<img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="120" height="124" /></h2>
+<h2>ARMAN SHOJAEIFARD, Ph.D., M.Sc., B.Eng.&nbsp;<img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="156" height="159" /></h2>
 <h3>Bio</h3>
 <p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>.&nbsp;My <a href="https://scholar.google.co.uk/citations?user=rTcTr_cAAAAJ&amp;hl=en" target="_blank">research</a> is in the area of Information Theory and Communications,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G and beyond&nbsp;cellular networks.</p>
 <h3>Journal Publications</h3>
