--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h3>Journal Publications</h3>
 <p>&bull; A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Self-Interference in Full-Duplex Multi-User MIMO Channels," <em>IEEE Commun. Lett.</em>, accepted 2017.</p>
 <p>&bull; A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>,&nbsp;submitted 2016.</p>
-<p>&bull; J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, submitted 2016.</p>
+<p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, submitted 2016.</p>
 <p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, J. Wen, "Joint Antenna Selection and Spatial Switching for Energy Efficient MIMO SWIPT System," <em>IEEE Trans. Veh. Technol.</em>, submitted 2016.</p>
 <p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, submitted 2016.</p>
 <p>&bull; A. Shojaeifard, K-K. Wong, K. A. Hamdi, E. Alsusa, D. So., J. Tang, "Stochastic Geometric Analysis of Energy-Efficient Dense Cellular Networks," <em>IEEE Access</em>, accepted 2016.&nbsp;</p>
