--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h2>ARMAN SHOJAEIFARD, Ph.D., M.Phil., M.Sc., B.Eng.&nbsp;</h2>
-<h3>About<a href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="124" height="128" /></a></h3>
+<h3>Bio<a href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="124" height="128" /></a></h3>
 <p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>.&nbsp;My <a href="https://scholar.google.co.uk/citations?user=rTcTr_cAAAAJ&amp;hl=en" target="_blank">research</a> is in the area of Information Theory and Communications,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G and beyond&nbsp;cellular networks.</p>
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with M.Phil. and Ph.D. degrees in Telecommunications from King's College London, UK. &nbsp;&nbsp;</p>
 <h3>Journal Publications</h3>
 <p>&bull; A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Self-Interference in Full-Duplex Multi-User MIMO Channels," <em>IEEE Commun. Lett.</em>, accepted 2017.</p>
 <p>&bull; A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>,&nbsp;submitted 2016.</p>
-<p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, submitted 2016.</p>
+<p>&bull; J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, submitted 2016.</p>
 <p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, J. Wen, "Joint Antenna Selection and Spatial Switching for Energy Efficient MIMO SWIPT System," <em>IEEE Trans. Veh. Technol.</em>, submitted 2016.</p>
 <p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, submitted 2016.</p>
 <p>&bull; A. Shojaeifard, K-K. Wong, K. A. Hamdi, E. Alsusa, D. So., J. Tang, "Stochastic Geometric Analysis of Energy-Efficient Dense Cellular Networks," <em>IEEE Access</em>, accepted 2016.&nbsp;</p>
@@ -18,3 +18,25 @@
 <p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "A Unified Model for the Design and Analysis of Spatially-Correlated Load-Aware HetNets," <em>IEEE Trans. Commun.</em>, vol. 62, no. 11, pp. 1-16, Nov. 2014.</p>
 <p>&bull; A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>&bull; A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
+<h3>Conference&nbsp;Publications</h3>
+<p>&bull; A. Shojaeifard, K-K. Wong, M. Direnzo, K. Hamdi,&nbsp;J. Tang, &ldquo;Self-Interference Distribution over Full-Duplex Multi-User MIMO Channels,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2017.</p>
+<p>&bull; A. Shojaeifard, K-K. Wong, M. Direnzo, G. Zheng, K. Hamdi,&nbsp;J. Tang, &ldquo;Full-Duplex versus Half-Duplex Large Scale Antenna System,"&nbsp;<em>IEEE Int. Conf. Commun. (ICC)</em>, submitted 2016.</p>
+<p>&bull; A. Shojaeifard, K-K. Wong, M. Direnzo, K. Hamdi,&nbsp;J. Tang, "Design and Analysis of Full-Duplex Massive MIMO Cellular Networks,"&nbsp;<em>IEEE Global Telecommun. Conf. (GLOBECOM), 2016.</em></p>
+<p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Spatial Switching-based MIMO SWIPT System,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, submitted 2016.</p>
+<p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficient Resource Allocation for MIMO SWIPT Broadcast Channels,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, submitted 2016.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Heterogeneous Cellular Networks,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, submitted 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, K-K. Wong, "On the Design of Irregular HetNets with Flow-Level Traffic Dynamics,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Fall)</em>, 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Modeling and analysis of cellular networks with elastic data traffic," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Optimal Deployment of Dense Cellular Networks,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Performance Analysis of Multi-Antenna HetNets,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "On the Statistics of SINR in Cellular Networks," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2015.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. Hamdi, A. Shojaeifard, "Energy efficiency in Heterogeneous Networks,"<em>&nbsp;IEEE Int. Conf. on Commun. (ICC)</em>, 2015.</p>
+<p>&bull; H. Saki, A. Shojaeifard, M. G. Martini, "Stochastic Resource Allocation for Hybrid Spectrum Access OFDMA-Based Cognitive Radios," <em>IEEE Int.&nbsp;Conf.&nbsp;Commun. (ICC), 2015.</em></p>
+<p>&bull; J. Tang, D. K. C. So,E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy Efficiency and Spectral Efficiency Trade-Off in MIMO Broadcast Channels,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Fall)</em>, 2015.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang,&nbsp;&ldquo;Spatial-Correlations and Load-Awareness in Heterogeneous Networks,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2015.</p>
+<p>&bull; A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Resource Allocation and Interference Management for Adaptive Modulation and Coding-Based OFDMA Cognitive Radio Networks," <em>IEEE Int. Conf. on Commun. (ICC)</em>, 2014.</p>
+<p>&bull; A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>Int. Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
+<p>&bull; H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy efficiency in Multi-Cell MIMO Broadcast Channels with Interference Alignment," <em>IEEE Global Commun. Conf.</em>, 2014.</p>
+<p>&bull; A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
+<p>&bull; A. Shojaeifard, F. Zarringhalam and M. Shikh-Bahaei, "Packet Error Rate(PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
