--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>&bull; J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficient Resource Allocation for MIMO SWIPT Broadcast Channels,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, submitted 2016.</p>
 <p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Heterogeneous Cellular Networks,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, submitted 2016.</p>
 <p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, K-K. Wong, "On the Design of Irregular HetNets with Flow-Level Traffic Dynamics,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Fall)</em>, 2016.</p>
-<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Modeling and analysis of cellular networks with elastic data traffic," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2016.</p>
+<p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Modeling and Analysis of Cellular Networks with Elastic Data Traffic," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2016.</p>
 <p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Optimal Deployment of Dense Cellular Networks,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2016.</p>
 <p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Performance Analysis of Multi-Antenna HetNets,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2016.</p>
 <p>&bull; A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "On the Statistics of SINR in Cellular Networks," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2015.</p>
@@ -37,6 +37,6 @@
 <p>&bull; A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Resource Allocation and Interference Management for Adaptive Modulation and Coding-Based OFDMA Cognitive Radio Networks," <em>IEEE Int. Conf. on Commun. (ICC)</em>, 2014.</p>
 <p>&bull; A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>Int. Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
 <p>&bull; H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
-<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy efficiency in Multi-Cell MIMO Broadcast Channels with Interference Alignment," <em>IEEE Global Commun. Conf.</em>, 2014.</p>
+<p>&bull; J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy Efficiency in Multi-Cell MIMO Broadcast Channels with Interference Alignment," <em>IEEE Global Commun. Conf.</em>, 2014.</p>
 <p>&bull; A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
-<p>&bull; A. Shojaeifard, F. Zarringhalam and M. Shikh-Bahaei, "Packet Error Rate(PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
+<p>&bull; A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Packet Error Rate(PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
