--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h2>ARMAN SHOJAEIFARD&nbsp;</h2>
-<h3>About<a href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.jpg" alt="" width="124" height="128" /></a></h3>
+<h3>About<a href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="124" height="128" /></a></h3>
 <p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>.&nbsp;My <a href="https://scholar.google.co.uk/citations?user=rTcTr_cAAAAJ&amp;hl=en" target="_blank">research</a> is in the area of Information Theory and Communications,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G and beyond&nbsp;cellular networks.</p>
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with M.Phil. and Ph.D. degrees in Telecommunications from King's College London, UK. &nbsp;&nbsp;</p>
 <h3>Journal Publications</h3>
