--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <p>[J2]&nbsp;A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>Conference&nbsp;Publications</h3>
-<p>[C21]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Spatial Switching-based MIMO SWIPT System,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
-<p>[C20]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficient Resource Allocation for MIMO SWIPT Broadcast Channels,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
-<p>[C19]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Heterogeneous Cellular Networks,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
-<p>[C18]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, K. Hamdi,&nbsp;J. Tang, &ldquo;Self-Interference Distribution over Full-Duplex Multi-User MIMO Channels,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2017.</p>
-<p>[C17]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. Hamdi,&nbsp;J. Tang, &ldquo;Full-Duplex versus Half-Duplex Large Scale Antenna System,"&nbsp;<em>IEEE Int. Conf. Commun. (ICC)</em>, submitted 2016.</p>
+<p>[C21]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. Hamdi,&nbsp;J. Tang, &ldquo;Full-Duplex versus Half-Duplex Large Scale Antenna System,"&nbsp;<em>IEEE Int. Conf. Commun. (ICC)</em>, 2017.</p>
+<p>[C20]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Spatial Switching-based MIMO SWIPT System,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
+<p>[C19]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficient Resource Allocation for MIMO SWIPT Broadcast Channels,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
+<p>[C18]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Heterogeneous Cellular Networks,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
+<p>[C17]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, K. Hamdi,&nbsp;J. Tang, &ldquo;Self-Interference Distribution over Full-Duplex Multi-User MIMO Channels,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2017.</p>
 <p>[C16]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, K. Hamdi,&nbsp;J. Tang, "Design and Analysis of Full-Duplex Massive MIMO Cellular Networks,"&nbsp;<em>IEEE Global Telecommun. Conf. (GLOBECOM), 2016.</em></p>
 <p>[C15]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, K-K. Wong, "On the Design of Irregular HetNets with Flow-Level Traffic Dynamics,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Fall)</em>, 2016.</p>
 <p>[C14]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Modeling and Analysis of Cellular Networks with Elastic Data Traffic," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2016.</p>
