--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 <p>[C1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Packet Error Rate (PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
 <h3>Contact</h3>
 <p>Dr. Arman Shojaeifard, Research Fellow</p>
-<p>Department of Electronic &amp; Electrical Engineering,&nbsp;University College London,&nbsp;Torrington Place, London WC1E 7JE, UK</p>
+<p>Department of Electronic &amp; Electrical Engineering</p>
+<p>University College London</p>
+<p>Torrington Place, London WC1E 7JE, UK</p>
 <p>E-Mail:&nbsp;<a href="mailto:a.shojaeifard@ucl.ac.uk">a.shojaeifard[at]ucl.ac.uk&nbsp;</a></p>
 <p>Twitter:&nbsp;<a href="https://twitter.com/armansfd">@armansfd</a></p>
 <p>&nbsp;</p>
