--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with M.Phil. and Ph.D. degrees in Telecommunications from King's College London, UK. &nbsp;&nbsp;</p>
 <p>Currently serving on TPC for IEEE GLOBECOM 2017 (WC and CRN) and IEEE ICC 2017 (CRN). &nbsp;&nbsp;</p>
 <h3>Journal Publications</h3>
-<p>[J17]&nbsp;J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy-Efficiency Optimization for CoMP-SWIPT Heterogeneous Cellular Networks," <em>IEEE Trans. Wireless Commun.</em>, submitted 2017.</p>
+<p>[J17]&nbsp;J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy-Efficiency Optimization for CoMP-SWIPT Heterogeneous Networks," <em>IEEE Trans. Commun.</em>, submitted 2017.</p>
 <p>[J16]&nbsp;J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, 2017.</p>
 <p>[J15]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Self-Interference in Full-Duplex Multi-User MIMO Channels," <em>IEEE Commun. Lett.</em>, vol. 21, no. 4, pp. 841-844, Apr. 2017.</p>
 <p>[J14]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>,&nbsp;submitted 2016.</p>
