--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <p>[J2]&nbsp;A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>Conference&nbsp;Publications</h3>
+<p>[C23]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Energy-Efficient Resource Allocation in CoMP-SWIPT Heterogeneous Networks,"&nbsp;<em>IEEE Int. Conf. Commun. China (ICCC)</em>, 2017.</p>
+<p>[C22]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Physical Layer Security in Full-Duplex Cellular Networks,"&nbsp;<em>IEEE Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2017.</p>
 <p>[C21]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. Hamdi,&nbsp;J. Tang, &ldquo;Full-Duplex versus Half-Duplex Large Scale Antenna System,"&nbsp;<em>IEEE Int. Conf. Commun. (ICC)</em>, 2017.</p>
 <p>[C20]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Spatial Switching-based MIMO SWIPT System,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
 <p>[C19]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficient Resource Allocation for MIMO SWIPT Broadcast Channels,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
@@ -39,9 +41,9 @@
 <p>[C7]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy Efficiency in Multi-Cell MIMO Broadcast Channels with Interference Alignment," <em>IEEE Global Commun. Conf. (GLOBECOM)</em>, 2014.</p>
 <p>[C6]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang,&nbsp;&ldquo;Spatial-Correlations and Load-Awareness in Heterogeneous Networks,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2014.</p>
 <p>[C5]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Resource Allocation and Interference Management for Adaptive Modulation and Coding-Based OFDMA Cognitive Radio Networks," <em>IEEE Int. Conf. on Commun. (ICC)</em>, 2014.</p>
-<p>[C4]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>Int. Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
-<p>[C3]&nbsp;H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
-<p>[C2]&nbsp;A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
+<p>[C4]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>IEEE Int. Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
+<p>[C3]&nbsp;H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;IEEE Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
+<p>[C2]&nbsp;A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>IEEE Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
 <p>[C1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Packet Error Rate (PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
 <h3>Contact</h3>
 <p>Dr. Arman Shojaeifard, Research Fellow</p>
