--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>Conference&nbsp;Publications</h3>
 <p>[C23]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Energy-Efficient Resource Allocation in CoMP-SWIPT Heterogeneous Networks,"&nbsp;<em>IEEE Int. Conf. Commun. China (ICCC)</em>, 2017.</p>
-<p>[C22]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Physical Layer Security in Full-Duplex Cellular Networks,"&nbsp;<em>IEEE Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2017.</p>
+<p>[C22]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Physical Layer Security in Full-Duplex Cellular Networks,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2017.</p>
 <p>[C21]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. Hamdi,&nbsp;J. Tang, &ldquo;Full-Duplex versus Half-Duplex Large Scale Antenna System,"&nbsp;<em>IEEE Int. Conf. Commun. (ICC)</em>, 2017.</p>
 <p>[C20]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficiency Optimization for Spatial Switching-based MIMO SWIPT System,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
 <p>[C19]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard, K-K. Wong, &ldquo;Energy Efficient Resource Allocation for MIMO SWIPT Broadcast Channels,&rdquo; <em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2017.</p>
@@ -35,15 +35,15 @@
 <p>[C13]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Optimal Deployment of Dense Cellular Networks,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2016.</p>
 <p>[C12]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "Performance Analysis of Multi-Antenna HetNets,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2016.</p>
 <p>[C11]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "On the Statistics of SINR in Cellular Networks," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2015.</p>
-<p>[C10]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. Hamdi, A. Shojaeifard, "Energy efficiency in Heterogeneous Networks,"<em>&nbsp;IEEE Int. Conf. on Commun. (ICC)</em>, 2015.</p>
+<p>[C10]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. Hamdi, A. Shojaeifard, "Energy efficiency in Heterogeneous Networks,"<em>&nbsp;IEEE Int. Conf. Commun. (ICC)</em>, 2015.</p>
 <p>[C9]&nbsp;H. Saki, A. Shojaeifard, M. G. Martini, "Stochastic Resource Allocation for Hybrid Spectrum Access OFDMA-Based Cognitive Radios," <em>IEEE Int.&nbsp;Conf.&nbsp;Commun. (ICC), 2015.</em></p>
 <p>[C8]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy Efficiency and Spectral Efficiency Trade-Off in MIMO Broadcast Channels,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Fall)</em>, 2015.</p>
 <p>[C7]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, "Energy Efficiency in Multi-Cell MIMO Broadcast Channels with Interference Alignment," <em>IEEE Global Commun. Conf. (GLOBECOM)</em>, 2014.</p>
 <p>[C6]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang,&nbsp;&ldquo;Spatial-Correlations and Load-Awareness in Heterogeneous Networks,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2014.</p>
-<p>[C5]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Resource Allocation and Interference Management for Adaptive Modulation and Coding-Based OFDMA Cognitive Radio Networks," <em>IEEE Int. Conf. on Commun. (ICC)</em>, 2014.</p>
-<p>[C4]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>IEEE Int. Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
-<p>[C3]&nbsp;H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;IEEE Conf. on Comput., Networking and Commun. (ICNC)</em>, 2014.</p>
-<p>[C2]&nbsp;A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>IEEE Int. Symp. on Personal, Indoor and Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
+<p>[C5]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Resource Allocation and Interference Management for Adaptive Modulation and Coding-Based OFDMA Cognitive Radio Networks," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2014.</p>
+<p>[C4]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>IEEE Int. Conf. Comput., Networking Commun. (ICNC)</em>, 2014.</p>
+<p>[C3]&nbsp;H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;IEEE Conf. Comput., Networking Commun. (ICNC)</em>, 2014.</p>
+<p>[C2]&nbsp;A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
 <p>[C1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Packet Error Rate (PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
 <h3>Contact</h3>
 <p>Dr. Arman Shojaeifard, Research Fellow</p>
