--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with M.Phil. and Ph.D. degrees in Telecommunications from King's College London, UK. &nbsp;&nbsp;</p>
 <p>Currently serving on TPC for IEEE GLOBECOM 2017 (WC and CRN) and IEEE ICC 2017 (CRN). &nbsp;&nbsp;</p>
 <h3>Journal Publications</h3>
+<p>[J15]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J., accepted 2017.</p>
 <p>[J14]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, accepted 2017.</p>
 <p>[J13]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>,&nbsp; vol. 65, no. 11, pp. 4734-4750, Nov. 2017.</p>
 <p>[J12]&nbsp;J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, vol. 16, no. 7, pp. 4754-4769, July 2017.</p>
