--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h2>ARMAN SHOJAEIFARD | HOMEPAGE&nbsp;</h2>
 <h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="124" height="128" /></a></h3>
-<p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, UK.&nbsp;My research is in the area of Information Theory and Wireless Communications,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G cellular networks and beyond.</p>
+<p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, UK.&nbsp;My research is in the area of Wireless Communications Theory,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G cellular networks and beyond.</p>
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with M.Phil. and Ph.D. degrees in Telecommunications from King's College London, UK. &nbsp;&nbsp;</p>
 <p>Currently serving on TPC for IEEE GLOBECOM 2017 (WC and CRN) and IEEE ICC 2017 (CRN). &nbsp;&nbsp;</p>
 <h3>Journal Publications</h3>
