--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>[C6]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang,&nbsp;&ldquo;Spatial-Correlations and Load-Awareness in Heterogeneous Networks,&rdquo; <em>IEEE Wireless Commun.&nbsp;Networking Conf. (WCNC)</em>, 2014.</p>
 <p>[C5]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Resource Allocation and Interference Management for Adaptive Modulation and Coding-Based OFDMA Cognitive Radio Networks," <em>IEEE Int. Conf. Commun. (ICC)</em>, 2014.</p>
 <p>[C4]&nbsp;A. Shojaeifard, H. Saki, M. M. Mahyari, M. Shikh-Bahaei, "Cross-Layer Radio Resource Allocation for Multi-Service Networks of Heterogeneous Traffic," <em>IEEE Int. Conf. Comput., Networking Commun. (ICNC)</em>, 2014.</p>
-<p>[C3]&nbsp;H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>Int.&nbsp;IEEE Conf. Comput., Networking Commun. (ICNC)</em>, 2014.</p>
+<p>[C3]&nbsp;H. Saki, A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Resource Allocation for Video Streaming over OFDMA Cognitive Radio Networks with Imperfect Cross-Link CSI," <em>IEEE Int. Conf. Comput., Networking Commun. (ICNC)</em>, 2014.</p>
 <p>[C2]&nbsp;A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Throughput-Optimal Cross-Layer Resource Allocation in DS-CDMA Systems with Nakagami Multipath Fading," <em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2011.</p>
 <p>[C1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Packet Error Rate (PER)-Based Cross-Layer Optimization of CDMA Networks,"&nbsp;<em>IEEE Global Telecommun. Conf.&nbsp;(GLOBECOM)</em>, 2011.</p>
 <h3>Contact</h3>
