--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h3>Journal Publications</h3>
 <p>[J15]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, accepted 2017.</p>
 <p>[J14]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, accepted 2017.</p>
-<p>[J13]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>,&nbsp; vol. 65, no. 11, pp. 4734-4750, Nov. 2017.</p>
+<p>[J13]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>, vol. 65, no. 11, pp. 4734-4750, Nov. 2017.</p>
 <p>[J12]&nbsp;J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with Simultaneous Wireless Information and Power Transfer in MIMO Broadcast Channels," <em>IEEE Trans. Wireless Commun.</em>, vol. 16, no. 7, pp. 4754-4769, July 2017.</p>
 <p>[J11]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Self-Interference in Full-Duplex Multi-User MIMO Channels," <em>IEEE Commun. Lett.</em>, vol. 21, no. 4, pp. 841-844, Apr. 2017.</p>
 <p>[J10]&nbsp;A. Shojaeifard, K-K. Wong, K. A. Hamdi, E. Alsusa, D. So., J. Tang, "Stochastic Geometric Analysis of Energy-Efficient Dense Cellular Networks," <em>IEEE Access</em>, vol. 5, no. , pp. 455-469, Jan. 2017.&nbsp;</p>
@@ -20,7 +20,7 @@
 <p>[J2]&nbsp;A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
 <h3>Conference&nbsp;Publications</h3>
-<p>[C25]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Full-duplex enabled cloud radio access network,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
+<p>[C25]&nbsp;A. Shojaeifard, K-K. Wong, W. Yu, G. Zheng,&nbsp;J. Tang, &ldquo;;Full-duplex MIMO small-cells: Secrecy capacity analysis,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C24]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Full-duplex MIMO small-cells: Secrecy capacity analysis,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C23]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Energy-Efficient Resource Allocation in CoMP-SWIPT Heterogeneous Networks,"&nbsp;<em>IEEE Int. Conf. Commun. China (ICCC)</em>, 2017.</p>
 <p>[C22]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Physical Layer Security in Full-Duplex Cellular Networks,"&nbsp;<em>IEEE Int. Symp. Personal Indoor Mobile Radio Commun. (PIMRC)</em>, 2017.</p>
@@ -50,4 +50,4 @@
 <p>Department of Electronic &amp; Electrical Engineering, University College London, Torrington Place, London WC1E 7JE, UK</p>
 <p>E-Mail:&nbsp;<a href="mailto:a.shojaeifard@ucl.ac.uk">a.shojaeifard[at]ucl.ac.uk&nbsp;</a></p>
 <p>Twitter:&nbsp;<a href="https://twitter.com/armansfd">@armansfd</a></p>
-<p>&nbsp;</p>
+<p><a href="https://html-cleaner.com/css/">Clean and compress CSS files</a> for an optimized website. Try the free online tool by HTML Cleaner.</p>
