--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
 <a href="index.html" class="button">Home</a>
-<a href="armansfd.github.io/publications" class="button">Publications</a>
+<a href="publications.html" class="button">Publications</a>
 <h3>Journal Publications</h3>
 <p>[J16]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, accepted 2018.</p>
 <p>[J15]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, accepted 2017.</p>
