--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<a href="index.html" class="button">Home</a>
-&nbsp;
-<a href="publications.html" class="button">Publications</a>
-&nbsp;
-<a href="contact.html" class="button">Contact</a>
+<p><a href="index.html">Home</a> <a href="publications.html">Publications</a> <a href="contact.html">Contact</a></p>
 <h2>ARMAN SHOJAEIFARD | HOMEPAGE&nbsp;</h2>
 <h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.png"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="124" height="128" /></a></h3>
 <p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, UK.&nbsp;My research is in the area of Wireless Communications Theory,&nbsp;with a particular focus on the design, modelling, performance analysis, and optimisation of 5G cellular networks and beyond.</p>
