--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<p><a href="index.html">Home</a> <a href="publications.html">Publications</a> <a href="contact.html">Contact</a></p>
+<h4><a href="index.html">Home</a> <a href="publications.html">Publications</a> <a href="contact.html">Contact</a></h4>
 <h3>Contact</h3>
 <p>Dr. Arman Shojaeifard, Research Fellow</p>
 <p>Department of Electronic &amp; Electrical Engineering, University College London, Torrington Place, London WC1E 7JE, UK</p>
