--- a/publications.html
+++ b/publications.html
@@ -1,4 +1,4 @@
-<h4><a href="index.html">Home</a> <a href="publications.html">Publications</a> <a href="contact.html">Contact</a></h4>
+<h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h3>Journal Publications</h3>
 <p>[J16]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, accepted 2018.</p>
 <p>[J15]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, accepted 2017.</p>
