--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
-<p>Dr. Arman Shojaeifard, Research Fellow</p>
+<p>Dr. Arman Shojaei Fard, Research Fellow</p>
 <p>Department of Electronic &amp; Electrical Engineering, University College London, Torrington Place, London WC1E 7JE, UK</p>
 <p>E-Mail:&nbsp;<a href="mailto:a.shojaeifard@ucl.ac.uk">a.shojaeifard[at]ucl.ac.uk&nbsp;</a></p>
 <p>Twitter:&nbsp;<a href="https://twitter.com/armansfd">@armansfd</a></p>
