--- a/publications.html
+++ b/publications.html
@@ -1,5 +1,5 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
-<h3>Journal Publications</h3>
+<h3>Journals</h3>
 <p>[J16]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, accepted 2018.</p>
 <p>[J15]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, accepted 2017.</p>
 <p>[J14]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, accepted 2017.</p>
@@ -16,7 +16,7 @@
 <p>[J3]&nbsp;A. Shojaeifard, K. A. Hamdi, E. Alsusa, D. K. C. So, J. Tang, "A Unified Model for the Design and Analysis of Spatially-Correlated Load-Aware HetNets," <em>IEEE Trans. Commun.</em>, vol. 62, no. 11, pp. 1-16, Nov. 2014.</p>
 <p>[J2]&nbsp;A. Shojaeifard, M. Shikh-Bahaei, "Cross-Layer Design and Optimization of CDMA Networks in Frequency-Selective Fading Channels," <em>IEEE Wireless Commun. Lett.</em>, vol. 1, no. 6, pp. 605-608, Dec. 2012.</p>
 <p>[J1] A. Shojaeifard, F. Zarringhalam, M. Shikh-Bahaei, "Joint Physical Layer and Data Link Layer Optimization of CDMA-Based Networks," <em>IEEE Trans. Wireless Commun.</em>, vol. 10, no. 10, pp. 3278-3287, Oct. 2011.</p>
-<h3>Conference&nbsp;Publications</h3>
+<h3>Conferences</h3>
 <p>[C25]&nbsp;A. Shojaeifard, K-K. Wong, W. Yu, G. Zheng,&nbsp;J. Tang, &ldquo;Full-Duplex Enabled Cloud Radio Access Network,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C24]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Full-Duplex MIMO Small-Cells: Secrecy Capacity Analysis,"&nbsp;<em>IEEE Veh. Technol. Conf. (VTC-Spring)</em>, 2018.</p>
 <p>[C23]&nbsp;J. Tang, D. K. C. So, A. Shojaeifard,&nbsp;K-K. Wong, &ldquo;Energy-Efficient Resource Allocation in CoMP-SWIPT Heterogeneous Networks,"&nbsp;<em>IEEE Int. Conf. Commun. China (ICCC)</em>, 2017.</p>
