--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h2>ARMAN SHOJAEI FARD | HOMEPAGE&nbsp;</h2>
-<h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.jpg"><img style="float: right;" src="https://armansfd.github.io/arman.png" alt="" width="124" height="128" /></a></h3>
+<h3>About<a style="pointer-events: none; cursor: default;" href="https://armansfd.github.io/arman.jpg"><img style="float: right;" src="https://armansfd.github.io/arman.jpg" alt="" width="124" height="128" /></a></h3>
 <p>I am a Research Fellow&nbsp;at&nbsp;the <a href="https://www.ee.ucl.ac.uk/cisg" target="_blank" rel="noopener">Communications and Information Systems Group</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, UK.&nbsp;My research background is in stochastic modelling and analysis, applied probability theory, optimisation techniques, and system-level simulations for large-scale networks.</p>
 <p>I have&nbsp;a B.Eng. degree in Information Systems Engineering from Imperial College London, UK, an M.Sc. degree in Signal Processing (with Distinction), together with M.Phil. and Ph.D. degrees in Wireless Communications from King's College London, UK. &nbsp;&nbsp;</p>
 <p>&nbsp;</p>
