--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <h4><a href="index.html">Home</a>&nbsp;&nbsp;<a href="publications.html">Publications</a>&nbsp;&nbsp;<a href="contact.html">Contact</a></h4>
 <h3>Journals</h3>
-<p>[J16]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, accepted 2018.</p>
-<p>[J15]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>, accepted 2017.</p>
+<p>[J16]&nbsp;J. Tang, Daniel K. C. So, N. Zhao, A. Shojaeifard, K-K. Wong, "Energy Efficiency Optimization with SWIPT in MIMO Broadcast Channels for Internet of Things," <em>IEEE Internet Things J.</em>,  vol. 67, no. 3, pp. 2439-2453, Mar. 2018.</p>
+<p>[J15]&nbsp;A. Babaei, A. H. Aghvami, A. Shojaeifard, K-K. Wong, "Full-Duplex Small-Cell Networks: A Physical-Layer Security Perspective," <em>IEEE Trans. Commun.</em>, accepted 2018.</p>
 <p>[J14]&nbsp;J. Tang, D. K. C. So, E. Alsusa, K. A. Hamdi, A. Shojaeifard, K-K. Wong, "Energy-Efficient Heterogeneous Cellular Networks with Spectrum Underlay and Overlay Access," <em>IEEE Trans. Veh. Technol.</em>, accepted 2017.</p>
 <p>[J13]&nbsp;A. Shojaeifard, K-K. Wong, M. D. Renzo, G. Zheng, K. A. Hamdi, J. Tang, "Massive MIMO-Enabled Full-Duplex Cellular Networks," <em>IEEE Trans. Commun.</em>, vol. 65, no. 11, pp. 4734-4750, Nov. 2017.</p>
 <p>[J12]&nbsp;J. Tang, Daniel K. C. So, A. Shojaeifard, K-K. Wong, J. Wen, "Joint Antenna Selection and Spatial Switching for Energy Efficient MIMO SWIPT System," <em>IEEE Trans. Wireless Commun.</em>, vol. 16, no. 7, pp. 4754-4769, July 2017.</p>
